[package]
name = "actix-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3.24"
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = "0.11.11"
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10.3"
